#8 Gestió d'user creant endpoints de creació i un de buscar mitjançant l'id. Correccions de l'arxiu mapper i creació de packages per ordre